@@ -66,5 +66,4 @@
   <defaultSearchField>text</defaultSearchField>
   <uniqueKey>id</uniqueKey>
   
-  <similarity class="solr.SchemaSimilarityFactory"/>
 </schema>
