@@ -54,5 +54,4 @@
   <defaultSearchField>text</defaultSearchField>
   <uniqueKey>id</uniqueKey>
 
-  <similarity class="solr.SchemaSimilarityFactory"/>
 </schema>
