@@ -47,5 +47,4 @@
   <defaultSearchField>text</defaultSearchField>
   <uniqueKey>id</uniqueKey>
 
-  <similarity class="solr.SchemaSimilarityFactory"/>
 </schema>
