@@ -634,5 +634,4 @@
 
   <solrQueryParser defaultOperator="OR"/>
 
-  <similarity class="solr.SchemaSimilarityFactory" />
 </schema>
