@@ -72,5 +72,4 @@
   <defaultSearchField>text</defaultSearchField>
   <uniqueKey>id</uniqueKey>
   
-  <similarity class="solr.SchemaSimilarityFactory"/>
 </schema>
