@@ -430,7 +430,5 @@ valued. -->
 
  <!-- field for the QueryParser to use when an explicit fieldname is absent -->
  <defaultSearchField>text</defaultSearchField>
-
- <similarity class="solr.SchemaSimilarityFactory"/>
  
 </schema>
