@@ -20,11 +20,18 @@ import org.apache.solr.rest.SolrRestletTestBase;
 import org.junit.Test;
 
 public class TestSchemaSimilarityResource extends SolrRestletTestBase {
+
+  /**
+   * NOTE: schema used by parent class doesn't define a global sim, so we get the implicit default
+   * which causes the FQN of the class to be returned
+   * 
+   * @see TestClassNameShortening#testShortenedGlobalSimilarityStaysShortened
+   */
   @Test
   public void testGetSchemaSimilarity() throws Exception {
     assertQ("/schema/similarity?indent=on&wt=xml",
             "count(/response/lst[@name='similarity']) = 1",
-            "/response/lst[@name='similarity']/str[@name='class'][.='solr.SchemaSimilarityFactory']");
+            "/response/lst[@name='similarity']/str[@name='class'][.='org.apache.solr.search.similarities.SchemaSimilarityFactory']");
   }
 }
 
